# eclipsis-rs

./: .gitignore  Cargo.toml  README.md  config.yaml
docs/: ApiError.md  ApiKeyData.md  ClientApi.md  Match.md  MatchApi.md  MatchPlayer.md  MatchTeam.md  Success.md  Success1.md  Success10.md  Success11.md  Success2.md  Success3.md  Success4.md  Success5.md  Success6.md  Success7.md  Success8.md  Success9.md  UserApi.md
src/: api.rs  config.rs  lib.rs  test.rs
src/apis/: client_api.rs  configuration.rs  match_api.rs  mod.rs  user_api.rs
src/models/: api_error.rs  api_key_data.rs  match_player.rs  match_team.rs  mod.rs  model_match.rs  success.rs  success_1.rs  success_10.rs  success_11.rs  success_2.rs  success_3.rs  success_4.rs  success_5.rs  success_6.rs  success_7.rs  success_8.rs  success_9.rs
