[package]
name = "eclipsis-rs"
version = "0.0.1"
authors = ["Jack Fox <0xdeadbeef1@gmail.com>"]
description = "Package for interfacing with the Eclipsis API"
license = "MIT"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
reqwest-middleware = "0.2.0"

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
tokio = { version = "^1.0", features = ["full"] }